Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignNumObjNumObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(Test())
        if v:GetValue() = 5.0
            output "passed"
        end
    end

    action Test() returns Number
        Number var
        var:SetValue(5.0)
        return var
    end
end