Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjNumberField.quorum
class Main
    Text v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Text
        number var = 5.0
        return var
    end
end